# docs/swagger.json
@@ -8,7 +8,7 @@
     },
     "host": "localhost:3000",
     "paths": {
-        "/api/v1/auth/login": {
+        "/api/v1/core/auth/login": {
             "post": {
                 "description": "register",
                 "consumes": [
@@ -72,7 +72,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/api/v1/core/auth/register": {
             "post": {
                 "description": "register",
                 "consumes": [
@@ -124,7 +124,7 @@
                 }
             }
         },
-        "/api/v1/profile/addresses": {
+        "/api/v1/core/profile/addresses": {
             "get": {
                 "security": [
                     {
@@ -281,7 +281,7 @@
                 }
             }
         },
-        "/api/v1/profile/addresses/me": {
+        "/api/v1/core/profile/addresses/me": {
             "get": {
                 "security": [
                     {
@@ -327,7 +327,7 @@
                 }
             }
         },
-        "/api/v1/profile/addresses/{address_id}": {
+        "/api/v1/core/profile/addresses/{address_id}": {
             "put": {
                 "security": [
                     {
